Language switcher and other stuff

--- a/app/i18n/locales/da/translation.json
+++ b/app/i18n/locales/da/translation.json
@@ -1,7 +1,8 @@
 {
   "nav": {
+    "switchLanguage": "Skift til <0>dansk</0>",
     "mentoringLinkText": "mentoring",
-    "softwareDevelopmentLinkText": "Udvikling"
+    "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)"
   },
   "frontpage": {
     "heroSection": {
@@ -10,6 +11,12 @@
     "mentoring": {
       "headingText": "Mentoring",
       "sectionText": "Jeg tilbyder one-on-one mentoring"
+    },
+    "softwareDevelopment": {
+      "headingText": "Software Development",
+      "paragraph1": "Skal I have bygget software? Eller mangler I kompetente udviklere til jeres eksisterende team?",
+      "paragraph2": "Gennem 25år har jeg opbygget kendskab til en bred vifte af teknologier og udviklings-paradigmer. Jeg er udøver af TDD (Test-driven development), en ofte misforstået metode, men når den anvendes rigtigt leder til et mere vedligeholdelsesvenligt system, færre fejl OG højere produktivitet allerede på kort bane.",
+      "paragraph3": "Jeg er vant til at arbejde i større virksomheder, og har fokus på de forretningsprocesser, der skal optimeres."
     }
   }
 }
