--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -4,19 +4,32 @@
     "mentoringLinkText": "Mentoring",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)"
   },
+  "links": {
+    "githubLinkLabel": "Go to my github profile",
+    "linkedInLinkLabel": "Go to my LinkedIn profile"
+  },
   "frontpage": {
     "heroSection": {
       "headingText": "Freelance Software Developer with <0>25+ years of experience</0>"
     },
     "mentoring": {
       "headingText": "Mentoring",
-      "sectionText": "I provide one-on-one mentoring sessions"
+      "section1": {
+        "heading": "Courses",
+        "paragraph1": "Is your software development department in need of learning a new technology? Is your .NET web app no longer sufficient? I offer custom courses to help kickstart your department"
+      },
+      "section2": {
+        "heading": "Remote training and pair programming",
+        "paragraph1": "With the aid of pair programming session I can support your journey to a new technology stack, or teach improved efficiency by properly applying TDD",
+        "paragraph2": "Contact me to learn more about courses and traning"
+      },
+      "imageCaption": "An illustration of a techer performing the sign of the horns? AI still has its limitations"
     },
     "softwareDevelopment": {
       "headingText": "Software Development",
       "paragraph1": "Are you looking for someone to build a software solution for you? Or do you need new skillede developers for your existing team?",
-      "paragraph2": "TODO",
-      "paragraph3": "TODO"
+      "paragraph2": "During years, I've learned to master a wide range of programming languages and paradigms. I am a keep practitioner of TDD (Test-Driven Development) - a technique often misunderstood. But when applied correctly it will lead to a more maintainable code base, fewer bugs, AND an increate in productivity up front",
+      "paragraph3": "I am comfortable working both on my own, and in larger teams and organisations, where I never loose focus of the buniess processes in need of optimisation"
     }
   }
 }
