--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
   "nav": {
     "switchLanguage": "Switch to <0>English</0>",
-    "mentoringLinkText": "Mentoring",
+    "coursesLinkText": "Courses",
+    "trainingLinkText": "Training",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)"
   },
   "links": {
@@ -12,8 +13,15 @@
     "heroSection": {
       "headingText": "Freelance Software Developer with <0>25+ years of experience</0>"
     },
-    "mentoring": {
-      "headingText": "Mentoring",
+    "softwareDevelopment": {
+      "headingText": "Software Development",
+      "imageTitle": "Illustration of a programmer by his computer",
+      "paragraph1": "Are you looking for someone to build a software solution for you? Or do you need new skillede developers for your existing team?",
+      "paragraph2": "During years, I've learned to master a wide range of programming languages and paradigms. I am a keep practitioner of TDD (Test-Driven Development) - a technique often misunderstood. But when applied correctly it will lead to a more maintainable code base, fewer bugs, AND an increate in productivity up front",
+      "paragraph3": "I am comfortable working both on my own, and in larger teams and organisations, where I never loose focus of the buniess processes in need of optimisation"
+    },
+    "courses": {
+      "headingText": "Courses",
       "section1": {
         "heading": "Courses",
         "paragraph1": "Is your software development department in need of learning a new technology? Is your .NET web app no longer sufficient? I offer custom courses to help kickstart your department"
@@ -25,11 +33,10 @@
       },
       "imageCaption": "An illustration of a techer performing the sign of the horns? AI still has its limitations"
     },
-    "softwareDevelopment": {
-      "headingText": "Software Development",
-      "paragraph1": "Are you looking for someone to build a software solution for you? Or do you need new skillede developers for your existing team?",
-      "paragraph2": "During years, I've learned to master a wide range of programming languages and paradigms. I am a keep practitioner of TDD (Test-Driven Development) - a technique often misunderstood. But when applied correctly it will lead to a more maintainable code base, fewer bugs, AND an increate in productivity up front",
-      "paragraph3": "I am comfortable working both on my own, and in larger teams and organisations, where I never loose focus of the buniess processes in need of optimisation"
+    "training": {
+      "headingText": "Training and mentoring",
+      "imageTitle": "Illustration af en programmør i et online møde",
+      "paragraph1": "With the aid of pair programming session I can support your journey to a new technology stack, or teach improved efficiency by properly applying TDD"
     }
   }
 }
