--- a/app/i18n/locales/da/translation.json
+++ b/app/i18n/locales/da/translation.json
@@ -14,7 +14,7 @@
       "headingText": "Freelance Software udvikler med <0>mere end 25 års erfaring</0>"
     },
     "softwareDevelopment": {
-      "headingText": "Software Development",
+      "headingText": "Software Udvikling",
       "imageTitle": "Illustration af en programmør ved sin computer",
       "paragraph1": "Skal I have bygget software? Eller mangler I kompetente udviklere til jeres eksisterende team?",
       "paragraph2": "Gennem 25år har jeg opbygget kendskab til en bred vifte af teknologier og udviklings-paradigmer. Jeg er udøver af TDD (Test-driven development), en ofte misforstået metode, men når den anvendes rigtigt leder til et mere vedligeholdelsesvenligt system, færre fejl OG højere produktivitet allerede på kort bane.",
