--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -34,7 +34,7 @@
       "imageCaption": "An illustration of a techer performing the sign of the horns? AI still has its limitations"
     },
     "training": {
-      "headingText": "Training and mentoring",
+      "headingText": "Training and Mentoring",
       "imageTitle": "Illustration af en programmør i et online møde",
       "paragraph1": "With the aid of pair programming session I can support your journey to a new technology stack, or teach improved efficiency by properly applying TDD"
     }
