--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -1,9 +1,13 @@
 {
   "nav": {
+    "navLabel": "Site",
     "switchLanguage": "Switch to <0>English</0>",
     "coursesLinkText": "Courses",
     "trainingLinkText": "Training",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)"
+  },
+  "pageNav": {
+    "navLabel": "Page"
   },
   "links": {
     "githubLinkLabel": "Go to my github profile",
