Fix layout for child pages.

--- a/app/i18n/locales/da/translation.json
+++ b/app/i18n/locales/da/translation.json
@@ -4,7 +4,9 @@
     "switchLanguage": "Skift til <0>dansk</0>",
     "coursesLinkText": "Kurser",
     "trainingLinkText": "Træning",
-    "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)"
+    "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)",
+    "technicalSkillsLinkText": "Kompetencer",
+    "legalLinkText": "Virksomhed"
   },
   "pageNav": {
     "navLabel": "For denne side"
