--- a/app/i18n/locales/en/legal-page.json
+++ b/app/i18n/locales/en/legal-page.json
@@ -1,4 +1,5 @@
 {
   "headingText": "Company Information",
-  "regNo": "Company registration no.: {{regNo}}"
+  "bodyText": "I operate from a Danish registered company.",
+  "regNo": "<0>Company registration no.</0> <1>{{regNo}}</1>"
 }
