Fix popup menu for new page layout

--- a/app/i18n/locales/da/translation.json
+++ b/app/i18n/locales/da/translation.json
@@ -3,6 +3,7 @@
     "navLabel": "For dette websted",
     "switchLanguage": "Skift til <0>dansk</0>",
     "coursesLinkText": "Kurser",
+    "homeLinkText": "Hjem",
     "trainingLinkText": "Træning",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)",
     "technicalSkillsLinkText": "Kompetencer",
