--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -3,6 +3,7 @@
     "navLabel": "Site",
     "switchLanguage": "Switch to <0>English</0>",
     "coursesLinkText": "Courses",
+    "homeLinkText": "Home",
     "trainingLinkText": "Training",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)",
     "technicalSkillsLinkText": "Skills",
