fix: da/en heading on skills page had been switched

--- a/app/i18n/locales/da/skills-page.json
+++ b/app/i18n/locales/da/skills-page.json
@@ -5,7 +5,7 @@
     "cosmosDb": "Jeg har Cosmos DB erfaring, og det er relevant når jeg siger, lad være med at vælge det. I skal ikke ringe, hvis I allerede har valgt Cosmos DB. I ringer til mig, hvis I gerne vil lære at få den mest effektive softwareudvikling. Og hvis det er målet, så vælger I ikke Cosmos DB"
   },
   "langaugesSection": {
-    "headingText": "Programming languages"
+    "headingText": "Programmeringssprog"
   },
   "tddSection": {
     "headingText": "TDD",
