feat: Add new page showcasing open-source projects.

--- a/app/i18n/locales/da/translation.json
+++ b/app/i18n/locales/da/translation.json
@@ -7,6 +7,7 @@
     "trainingLinkText": "Træning",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)",
     "technicalSkillsLinkText": "Kompetencer",
+    "openSourceLinkText": "Open Source",
     "legalLinkText": "Virksomhed"
   },
   "pageNav": {
