--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -7,6 +7,7 @@
     "trainingLinkText": "Training",
     "softwareDevelopmentLinkText": "$t(frontpage.softwareDevelopment.headingText)",
     "technicalSkillsLinkText": "Skills",
+    "openSourceLinkText": "Open Source",
     "legalLinkText": "Legal"
   },
   "pageNav": {
